# cubemania

./: .autotest  .dockerignore  .env.sample  .gitignore  .rspec  .travis.yml  Dockerfile  Gemfile  Guardfile  Makefile  README  Rakefile  Todo  Vagrantfile  config.ru  deploy.sh  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  rebuild_api.sh  restart.sh  start_jobs.sh
.github/workflows/: image-build.yml
api/: .dockerignore  Cargo.toml  Dockerfile  DockerfileBuild  api.cabal  build.sh  run.sh  stack.yaml
api/app/: Main.hs
api/src/: Db.hs  Html.hs  Lib.hs  Mailer.hs  MyServantBlaze.hs  RecordCalculation.hs  Routes.hs  Types.hs  Utils.hs  Workers.hs  db.rs  error.rs  main.rs  record_job.rs
api/src/Frontend/: BackboneTemplates.hs  FormViewHelpers.hs  Forms.hs  PuzzleNavigation.hs
api/src/Types/: AppMonad.hs  Configuration.hs  Events.hs  Stores.hs  TimeZones.hs
api/src/handlers/: mod.rs  post.rs  puzzle.rs  record.rs  single.rs
api/test/: RecordCalculationSpec.hs  UtilSpec.hs  UtilsSpec.hs
app/abilities/: ability.rb  api_ability.rb
app/controllers/: activities_controller.rb  application.rb  application_controller.rb  authorizations_controller.rb  averages_controller.rb  backbones_controller.rb  clocks_controller.rb  comments_controller.rb  competitions_controller.rb  errors_controller.rb  facebooks_controller.rb  feeds_controller.rb  homes_controller.rb  items_controller.rb  kinds_controller.rb  logins_controller.rb  matches_controller.rb  participations_controller.rb  password_recoveries_controller.rb  posts_controller.rb  profiles_controller.rb  puzzles_controller.rb  records_controller.rb  reset_passwords_controller.rb  scrambles_controller.rb  sessions_controller.rb  shares_controller.rb  shouts_controller.rb  singles_controller.rb  timers_controller.rb  times_controller.rb  tweets_controller.rb  twitter_auths_controller.rb  users_controller.rb
app/helpers/: application_helper.rb  competitions_helper.rb  navigation_helper.rb  records_helper.rb  singles_helper.rb  url_helper.rb  users_helper.rb
app/mailer/: user_mailer.rb
app/mailers/: user_mailer.rb
app/models/: ability.rb  activity.rb  api_ability.rb  authorization.rb  average.rb  average_record.rb  average_type.rb  clock.rb  clock_observer.rb  comment.rb  competition.rb  cubing_session.rb  facebook_post.rb  feed.rb  following.rb  item.rb  kind.rb  login.rb  match.rb  match_observer.rb  participation.rb  post.rb  puzzle.rb  puzzleipation.rb  record.rb  record_type.rb  recovery.rb  rolling_average.rb  scramble.rb  session.rb  shout.rb  single.rb  user.rb  user_mailer.rb  user_observer.rb
app/presenters/: record_presenter.rb
app/sweepers/: user_sweeper.rb
backup/: Dockerfile  backup.sh  crontab  restore.sh  tarsnap.conf
config/: application.rb  boot.rb  database.yml  database.yml.sample  deploy.rb  environment.rb  mailer.yml  newrelic.yml  routes.rb  s3.yml  unicorn.rb
config/ansible/: bootstrap_user.yml  deploy.yml  production  provision.yml  site.yml  staging
config/deploy/: capistrano_database_yml.rb  database.yml.erb
config/environments/: development.rb  production.rb  test.rb
config/initializers/: cookie_verification_secret.rb  delayed_job.rb  formtastic.rb  humanizer.rb  omniauth.rb  postgresql_adapter_monkeypatch.rb  rspec_generator.rb  s3.rb  secret_token.rb  session_store.rb  set_db_environment_variables.rb  setup_email.rb  smtp_gmail.rb  time_formats.rb  wrap_parameters.rb
db/: development.sqlite3  schema.rb  seed.rb  seeds.rb  test.sqlite3
db/data/: bld_update.rb  solves.rb  wca_update.rb
db/migrate/: 0010_create_competitions.rb  001_create_puzzles.rb  002_create_kinds.rb  003_create_items.rb  004_add_index_kind_name_to_puzzles.rb  005_create_clocks.rb  006_create_users.rb  007_add_image_to_kinds.rb  007_create_competitions.rb  008_clock_belongs_to_user.rb  008_create_records.rb  009_add_scramble_to_clocks.rb  009_create_records.rb  010_add_turns_to_puzzles.rb  011_create_records.rb  012_add_column_record_id_to_puzzles.rb  013_add_column_attempt_count_to_records.rb  014_combine_averages_and_singles_in_clocks.rb  015_add_column_clock_type_to_records.rb  016_move_attempt_count_from_records_to_puzzles.rb  017_drop_record_table_and_add_record_flag_to_clocks.rb  018_add_column_countdown_to_puzzles.rb  019_add_column_dnf_to_clocks.rb  020_create_posts.rb  021_add_column_role_to_user.rb  022_create_comments.rb  023_add_column_comments_count_to_posts.rb  024_add_column_url_to_item.rb  025_add_column_position_to_items.rb  026_add_column_clocks_count_to_users.rb  027_add_indexes.rb  028_change_limit_of_encrypted_password.rb  029_add_comment_to_clocks.rb  030_add_position_to_clock.rb  031_allow_user_id_of_comments_to_be_null.rb  032_add_average_format_to_puzzles.rb  033_increase_scramble_limit.rb  034_add_column_wca_to_users.rb  035_create_competitions.rb  036_add_competition_id_to_clocks.rb  (+90 more)
files/chart/: Axes.as  Axis.as  AxisLabel.as  Chart.as  Grid.as  HorizontalAxis.as  Item.as  Legend.as  Main.as  Series.as  SeriesEvent.as  SeriesLabel.as  Tip.as  TipEvent.as  VerticalAxis.as  chart.fla  chart.mxml  chart.swf
files/puzzles/: 2x2x2.psd  3x3x3.psd  4x4x4.psd  5x5x5.psd  (+9 more)
frontend/: Dockerfile  package.json
lib/: api.rb  authentication.rb  average.rb  catalog.rb  comparable_solve.rb  create_activity.rb  cubing_average.rb  cubing_session_manager.rb  development_mail_interceptor.rb  facebook.rb  facebook_post.rb  humanizeable.rb  humanizer.rb  invalidate_records.rb  mean.rb  recalculate_records_history.rb  record_calculation_job.rb  rolling_average.rb  singles_formatter.rb  update_recent_records.rb  update_records.rb  window.rb
migrations/: V1__initial.sql
nbproject/: project.xml
nginx/: Dockerfile  nginx.conf  ssl.conf
nginx-ssl/: Dockerfile  nginx.conf
public/: .htaccess
records/: Cargo.toml  Dockerfile  neovim.md
records/src/: app_state.rs  db.rs  error.rs  main.rs  marshal.rs  record_job.rs
records/src/extractors/: mod.rs
records/src/handlers/: announcement.rs  user.rs
spec/: factories.rb  spec_helper.rb
test/: test_helper.rb
(+588 files in other folders)
