[package]
name = "api"
version = "0.1.0"
authors = ["timhabermaas <tim.habermaas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6.2", features = ["runtime-actix-native-tls", "postgres", "chrono"] }
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
actix-web = "4.2.1"
actix-rt = "2.7.0"
serde = { version = "1.0", features = ["derive"] }
csv = "1.1.5"
tracing = "0.1"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter", "fmt"] }
tracing-actix-web = "0.6.1"
jsonwebtoken = "7"
serde_json = "1.0"
base64 = "0.13"
futures = "0.3.24"
futures-util = "0.3.24"
itertools = "0.10.5"
