name:                api
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/api#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Types
                     , Utils
  other-modules:       Db
                     , Html
                     , MyServantBlaze
                     , Routes
                     , RecordCalculation
                     , Workers
                     , Types.Configuration
                     , Types.Stores
                     , Types.Events
                     , Types.AppMonad
                     , Frontend.Forms
                     , Frontend.FormViewHelpers
                     , Frontend.PuzzleNavigation
                     , Frontend.BackboneTemplates
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant
                     , servant-server
                     , wai
                     , warp
                     , wai-extra
                     , transformers
                     , postgresql-simple
                     , mtl
                     , stm
                     , text
                     , bytestring
                     , base16-bytestring
                     , time
                     , blaze-html
                     , markdown
                     , raw-strings-qq
                     , containers
                     , http-media
                     , http-api-data
                     , digestive-functors
                     , http-types
                     , resource-pool
                     , ekg-statsd
                     , ekg-core
                     , ekg
                     , unordered-containers
                     , cryptonite
                     , base64-bytestring
  default-language:    Haskell2010

executable api-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , api
  default-language:    Haskell2010

test-suite api-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , api
                     , hspec
  other-modules:       UtilsSpec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/api
