[package]
name = "records"
version = "0.1.0"
authors = ["timhabermaas <tim.habermaas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.4.2", features = [ "runtime-actix-native-tls", "postgres", "chrono" ] }
regex = "1"
chrono = { version = "0.4", features = [ "serde" ] }
actix-web = "3"
actix-rt = "1.1.1"
tokio = { version = "0.3.7", features = ["time", "rt"] }
serde = { version = "1.0", features = ["derive"] }
csv = "1.1.5"
tracing = "0.1"
tracing-bunyan-formatter = "0.1"
tracing-log = "0.1"
tracing-subscriber = { version = "0.2", features = [ "registry", "env-filter" ] }
tracing-futures = "0.2.4"
tracing-actix-web = "0.2"
tracing-appender = "0.1"
jsonwebtoken = "7"
rustc-serialize = "0.3"
lazy_static = "1.4.0"
