[package]
name = "records"
version = "0.1.0"
authors = ["timhabermaas <tim.habermaas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5.9", features = [ "runtime-actix-native-tls", "postgres", "chrono" ] }
regex = "1"
chrono = { version = "0.4", features = [ "serde" ] }
actix-web = "4.0.0-beta.13"
actix-rt = "2"
serde = { version = "1.0", features = ["derive"] }
csv = "1.1.5"
tracing = "0.1"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = [ "registry", "env-filter", "fmt" ] }
tracing-actix-web = "0.5.0-beta.4"
jsonwebtoken = "7"
serde_json = "1.0"
base64 = "0.13"
futures-util = "0.3"
